--- a/basics.html
+++ b/basics.html
@@ -4,6 +4,10 @@
 	<meta charset="UTF-8">
 	<title>A-frame basics</title>
 	<script type="text/javascript" src="https://aframe.io/releases/0.9.0/aframe.min.js"></script>
+	<script src="//cdn.rawgit.com/donmccurdy/aframe-extras/v3.13.1/dist/aframe-extras.min.js"></script>
+	<script src="https://rawgit.com/ngokevin/aframe-look-at-component/master/dist/aframe-look-at-component.min.js"></script> 
+    <script src="https://unpkg.com/aframe-maze-component@0.1.20/dist/aframe-maze-component.min.js"></script>
+
 	<!-- <script src="js/aframe/js"></script> --> <!-- other ways to import -->
 	<!-- <script src="js/aframe.min/js"></script> -->
 </head>
@@ -11,21 +15,25 @@
 	<a-scene>
 		<a-assets>
 			<img id="skytexture" src="img/snow.jpg">
+			<a-asset-item id="dolphin" src="assets/dolphin.obj"></a-asset-item>
 		</a-assets>
 		<a-sky src="img/snow.jpg"></a-sky>
-		<!-- <a-box position="-1 0.5 -3" color="tomato" scale="2 .3 2" src="img/tex.jpg" animation="property:rotation; dur:2000; loop:true; from:0 0 0; to:0 360 0; easing:linear;" rotation="30 30 30" animation__move="property:position; loop:true; dur:1000; to:2 0 0;"></a-box> -->
+		<a-entity id="player" camera="" universal-controls="" kinematic-body="" position="-0 0 0" rotation="" scale="" visible="" velocity="" gamepad-controls="" keyboard-controls="" touch-controls="" look-controls hmd-controls="" mouse-controls="">
+      </a-entity>
 
-		<a-plane color="black" rotation="-90 0 0" width="30" height="30" position="0 -10 0"></a-plane>
-		<a-sphere color="azure" position="0 -8 0" scale="4 4 4"></a-sphere>
-		<a-sphere color="azure" position="0 -4 0" scale="3 3 3"></a-sphere>
-		<a-sphere color="azure" position="0 0 0" scale="2 2 2"></a-sphere>
+		<!-- <a-box position="-1 0.5 -3" color="tomato" scale="2 .3 2" src="img/tex.jpg" animation="property:rotation; dur:2000; loop:true; from:0 0 0; to:0 360 0; easing:linear;" rotation="30 30 30" animation__move="property:position; loop:true; dur:1000; to:2 0 0;"></a-box> -->
+		<a-obj-model src="assets/dolphin.obj" color="darkslateblue" scale=".15 .15 .15" position="-4 0 -4" rotation="-90 0 0"></a-obj-model>
+		<a-plane static-body color="black" rotation="-90 0 0" width="30" height="30" position="0 -10 0"></a-plane>
+		<a-plane static-body color="red" rotation="110 0 0" width="7" height=""></a-plane>
+		<a-sphere static-body color="azure" position="0 -8 0" scale="4 4 4"></a-sphere>
+		<a-sphere static-body color="azure" position="0 -4 0" scale="3 3 3"></a-sphere>
+		<a-sphere static-body color="azure" position="0 0 0" scale="2 2 2"></a-sphere>
 		<a-cone position="2 0 0" rotation="90 90 0" scale=".8 2 .8" color="lightsalmon"></a-cone>
 		<a-sphere position="1.6 1 -.5" scale=".25 .25 .25" color="black"></a-sphere>
 		<a-sphere position="1.6 1 .5" scale=".3 .3 .3" color="black"></a-sphere>
 		<a-sphere position="2.5 -2 0" scale=".3 .3 .3" color="black"></a-sphere>
 		<a-sphere position="2.8 -3 0" scale=".3 .3 .3" color="black"></a-sphere>
 
-		<a-camera position="0 0 3" user-height="0"></a-camera>
 	</a-scene>
 </body>
 </html>
