--- a/basics.html
+++ b/basics.html
@@ -33,7 +33,7 @@
 		<a-sphere position="1.6 1 .5" scale=".3 .3 .3" color="black"></a-sphere>
 		<a-sphere position="2.5 -2 0" scale=".3 .3 .3" color="black"></a-sphere>
 		<a-sphere position="2.8 -3 0" scale=".3 .3 .3" color="black"></a-sphere>
-<!-- JEN IS TESTING -->
+<!-- JEN IS TESTING yo boi nate is testing now -->
 	</a-scene>
 </body>
 </html>
