--- a/basics.html
+++ b/basics.html
@@ -5,7 +5,7 @@
 	<title>A-frame basics</title>
 	<script type="text/javascript" src="https://aframe.io/releases/0.9.0/aframe.min.js"></script>
 	<script src="//cdn.rawgit.com/donmccurdy/aframe-extras/v3.13.1/dist/aframe-extras.min.js"></script>
-	<script src="https://rawgit.com/ngokevin/aframe-look-at-component/master/dist/aframe-look-at-component.min.js"></script> 
+	<script src="https://rawgit.com/ngokevin/aframe-look-at-component/master/dist/aframe-look-at-component.min.js"></script>
     <script src="https://unpkg.com/aframe-maze-component@0.1.20/dist/aframe-maze-component.min.js"></script>
 
 	<!-- <script src="js/aframe/js"></script> --> <!-- other ways to import -->
@@ -33,7 +33,7 @@
 		<a-sphere position="1.6 1 .5" scale=".3 .3 .3" color="black"></a-sphere>
 		<a-sphere position="2.5 -2 0" scale=".3 .3 .3" color="black"></a-sphere>
 		<a-sphere position="2.8 -3 0" scale=".3 .3 .3" color="black"></a-sphere>
-<!-- JEN IS TESTING -->
+<!-- Joanne IS TESTING -->
 	</a-scene>
 </body>
 </html>
