--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!-- test joanne -->
 <html>
   <head>
     <meta charset="utf-8">
@@ -20,13 +21,13 @@
           position="-20 20.8 20">
       </a-entity>
       <!-- birds-eye view box to stand on -->
-      <a-box static-body 
-          depth="0.25" height="0.5" width="0.5" 
+      <a-box static-body
+          depth="0.25" height="0.5" width="0.5"
           position="-20 19.8 20"
           color="tomato"></a-box>
 
-      <a-entity id="maze1" 
-          maze='size: 5 6; wall: #wall-one; cap: #end-cap; open: S 0 N 1 2 4 E 5;' 
+      <a-entity id="maze1"
+          maze='size: 5 6; wall: #wall-one; cap: #end-cap; open: S 0 N 1 2 4 E 5;'
           position='0 0.5 0'
           rotation='0 0 0'></a-entity>
 
