--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html>
-
   <head>
     <meta charset="utf-8">
     <title>Maize</title>
@@ -19,9 +18,11 @@
           camera
           universal-controls
           kinematic-body
-          position="40 10 60">
+          position="40 10 60"> <!-- starting point for player -->
       </a-entity>
 
+    <!-- ONLY CHANGE CODE BELOW THIS LINE TO AVOID MESSING UP PHYSICS -->
+    <!-- _______________________________________________________________________________ -->
     <!--Textures from images-->
     <a-assets>
       <img id="ded" src="img/ded.jpg">
@@ -61,6 +62,8 @@
 
     <!-- Ground of Maze -->
     <a-plane src="#ded" height="300" width="300" depth="-2.5" rotation="-90 0" material="" geometry="" visible="" position="0 .1 0"></a-plane>
+
+    <!-- _______________________________________________________________________________ -->
     </a-scene> 
   </body>
 </html>
