--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
 
     <!-- Code for the maze -->
-    <a-box id="ground" position='0 -3 0' width="200" height="1" depth="200" static-body material="src: #texture-floor"></a-box>
+    <a-box src="#ded" id="ground" position='0 -0.5 0' width="200" height="1" depth="200" static-body material="src: #texture-floor"></a-box>
     <a-box static-body position="20.73515 0 -14.2694" color="red" depth="1" material="" geometry="" scale="5 15 45" src="#briq"></a-box>
     <a-box static-body position="-34.55649 0 -47.47298" color="red" depth="1" material="" geometry="" scale="25 15 5" src="#briq"></a-box>
     <a-box static-body position="-46.877 0" color="red" depth="1" material="" geometry="" scale="5 15 100" src="#briq"></a-box>
@@ -66,11 +66,11 @@
     <a-box static-body position="11.13183 0 5.94682" color="red" depth="1" material="" geometry="" scale="15 15 5" src="#briq"></a-box>
     <a-box static-body position="-20.43404 0 -34.9838" color="red" depth="1" material="" geometry="" scale="30 15 5" src="#briq" rotation="0 90"></a-box>
     <a-box static-body position="0 7.5" color="grey" depth="1" material="" geometry="" scale="100 1 100" src="#hard" visible=""></a-box>
-    <a-obj-model src="assets/rat.obj" color="darkslateblue" scale="5 5 5" position="-4 0 -4" rotation="-90 0 0"></a-obj-model>
+    <a-obj-model src="#rat" color="grey" scale="5 5 5" position="-4 0 -4" rotation="0 0 0"></a-obj-model>
     <a-obj-model src="#wolf" material="normalScale:{&quot;x&quot;:1,&quot;y&quot;:1}" obj-model="obj:assets/wolf.obj"></a-obj-model>
 
     <!-- Ground of Maze -->
-    <a-plane src="#ded" height="300" width="300" depth="-2.5" rotation="-90 0" material="" geometry="" visible="" position="0 -2 0"></a-plane>
+    <a-plane src="#ded" height="300" width="300" depth="-2.5" rotation="-90 0" material="" geometry="" visible="" position="0 .1 0"></a-plane>
 
     <!-- _______________________________________________________________________________ -->
     </a-scene> 
