--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     <a-box static-body position="-20.43404 0 -34.9838" color="red" depth="1" material="" geometry="" scale="30 15 5" src="#briq" rotation="0 90"></a-box>
     <a-box static-body position="0 7.5" color="grey" depth="1" material="" geometry="" scale="100 1 100" src="#hard" visible=""></a-box>
     <a-obj-model src="#rat" color="grey" scale="5 5 5" position="-4 0 -4" rotation="0 0 0"></a-obj-model>
-    <a-obj-model src="#wolf" material="normalScale:{&quot;x&quot;:1,&quot;y&quot;:1}" obj-model="obj:assets/wolf.obj"></a-obj-model>
+    <a-obj-model src="#wolf" color="grey" scale=".01 .01 .01" position="0 .1 0" rotation="0 0 0"></a-obj-model>
 
     <!-- Ground of Maze -->
     <a-plane src="#ded" height="300" width="300" depth="-2.5" rotation="-90 0" material="" geometry="" visible="" position="0 .1 0"></a-plane>
