--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <img id="mazemap" src="img/tinymaze.jpg">
       <a-asset-item id="rat" src="assets/rat.obj"></a-asset-item>
       <a-asset-item id="wolf" src="assets/wolf.obj"></a-asset-item>
-
+      <a-asset-item id="panda" src="assets/panda.obj"></a-asset-item>
 
     </a-assets>
 
@@ -66,12 +66,20 @@
     <a-box static-body position="11.13183 0 5.94682" color="red" depth="1" material="" geometry="" scale="15 15 5" src="#briq"></a-box>
     <a-box static-body position="-20.43404 0 -34.9838" color="red" depth="1" material="" geometry="" scale="30 15 5" src="#briq" rotation="0 90"></a-box>
     <a-box static-body position="0 7.5" color="grey" depth="1" material="" geometry="" scale="100 1 100" src="#hard" visible=""></a-box>
+
+    <!-- phil's stuff -->
     <a-obj-model src="#rat" color="grey" scale="5 5 5" position="-4 0 -4" rotation="0 0 0"></a-obj-model>
 
     <!-- Jen's section -->
     <a-obj-model src="#wolf" color="grey" scale=".01 .01 .01" position="97.16 0.29 13.80" rotation="0 0 0"></a-obj-model>
 
-    
+    <!-- megan's stuff -->
+    <a-obj-model src="#panda" color="grey" scale=".003 .003 .003" position="99 0.29 13.80" rotation="0 0 0"></a-obj-model>
+
+    <!-- nate is not last -->
+
+    <!-- joanna's section -->
+
 
     <!-- Ground of Maze -->
     <a-plane src="#ded" height="300" width="300" depth="-2.5" rotation="-90 0" material="" geometry="" visible="" position="0 .1 0"></a-plane>
