--- a/index.html
+++ b/index.html
@@ -74,11 +74,11 @@
     <a-obj-model src="#wolf" color="grey" scale=".01 .01 .01" position="-24.46 0.02 14.62" rotation="0 -90 0"></a-obj-model>
 
     <!-- megan's stuff -->
-    <a-obj-model src="#panda" color="grey" scale=".003 .003 .003" position="99 0.29 13.80" rotation="0 0 0"></a-obj-model>
+    <a-obj-model src="#panda" color="grey" scale=".001 .001 .001" position="30.59 0.01 -9.39" rotation="0 0 0"></a-obj-model>
 
     <!-- nate is not last -->
 
-    <!-- joanna's section -->
+    <!-- joanne's section -->
 
 
     <!-- Ground of Maze -->
