--- a/basics.html
+++ b/basics.html
@@ -16,6 +16,8 @@
 		<a-assets>
 			<img id="skytexture" src="img/snow.jpg">
 			<a-asset-item id="dolphin" src="assets/dolphin.obj"></a-asset-item>
+			<a-asset-item id="unicorn" src="assets/unicorn.obj"></a-asset-item>
+
 		</a-assets>
 		<a-sky src="img/snow.jpg"></a-sky>
 		<a-entity id="player" camera="" universal-controls="" kinematic-body="" position="-0 0 0" rotation="" scale="" visible="" velocity="" gamepad-controls="" keyboard-controls="" touch-controls="" look-controls hmd-controls="" mouse-controls="">
@@ -23,6 +25,7 @@
 
 		<!-- <a-box position="-1 0.5 -3" color="tomato" scale="2 .3 2" src="img/tex.jpg" animation="property:rotation; dur:2000; loop:true; from:0 0 0; to:0 360 0; easing:linear;" rotation="30 30 30" animation__move="property:position; loop:true; dur:1000; to:2 0 0;"></a-box> -->
 		<a-obj-model src="assets/dolphin.obj" color="darkslateblue" scale=".15 .15 .15" position="-4 0 -4" rotation="-90 0 0"></a-obj-model>
+		<a-obj-model src="assets/unicorn.obj" color="darkslateblue" scale=".15 .15 .15" position="0 0 0" rotation="0 0 0"></a-obj-model>
 		<a-plane static-body color="black" rotation="-90 0 0" width="30" height="30" position="0 -10 0"></a-plane>
 		<a-plane static-body color="red" rotation="110 0 0" width="7" height=""></a-plane>
 		<a-sphere static-body color="azure" position="0 -8 0" scale="4 4 4"></a-sphere>
