--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
       <a-asset-item id="rat" src="assets/rat.obj"></a-asset-item>
       <a-asset-item id="wolf" src="assets/wolf.obj"></a-asset-item>
       <a-asset-item id="panda" src="assets/panda.obj"></a-asset-item>
+      <a-asset-item id="billy" src="assets/billy.obj"></a-asset-item>
 
     </a-assets>
 
@@ -69,6 +70,8 @@
 
     <!-- phil's stuff -->
     <a-obj-model src="#rat" color="grey" scale="5 5 5" position="-4 0 -4" rotation="0 0 0"></a-obj-model>
+
+    <a-obj-model src="#billy" color="grey" scale=".025 .025 .025 obj-model="obj:assets/billy.obj" position="62.35 -9 51" rotation="0 -48 -0"></a-obj-model>
 
     <!-- Jen's section -->
     <a-obj-model src="#wolf" color="grey" scale=".01 .01 .01" position="-24.46 0.02 14.62" rotation="0 -90 0"></a-obj-model>
