--- a/index.html
+++ b/index.html
@@ -77,7 +77,11 @@
     <a-obj-model src="#road" color="black" scale="5 1 18.5" obj-model="obj:assets/road.obj" position="-129.5 1 150.26" rotation="0 0 0"></a-obj-model>
 
     <!-- Jen's section -->
-    <a-obj-model src="#wolf" color="grey" scale=".01 .01 .01" position="-24.46 0.02 14.62" rotation="0 -90 0"></a-obj-model>
+    <a-obj-model src="#wolf" color="grey" scale=".01 .01 .01" position="-15.45 0.82 25.90" rotation="0 -90 0"></a-obj-model>
+
+    <a-obj-model src="#dragon" color="grey" scale=".01 .01 .01" position="-24.46 0.02 14.62" rotation="270 90 90"></a-obj-model>
+
+
 
     <!-- megan's stuff -->
     <a-obj-model src="#panda" color="grey" scale=".001 .001 .001" position="30.59 0.01 -9.39" rotation="0 0 0"></a-obj-model>
