--- a/index.html
+++ b/index.html
@@ -33,7 +33,6 @@
       <a-asset-item id="rat" src="assets/rat.obj"></a-asset-item>
       <a-asset-item id="wolf" src="assets/wolf.obj"></a-asset-item>
       <a-asset-item id="dragon" src="assets/dragon.obj"></a-asset-item>
-
       <a-asset-item id="panda" src="assets/panda.obj"></a-asset-item>
       <a-asset-item id="billy" src="assets/billy.obj"></a-asset-item>
       <a-asset-item id="unicorn" src="assets/unicorn.obj"></a-asset-item>
@@ -80,11 +79,9 @@
 
     <!-- Jen's section -->
     <a-obj-model src="#wolf" color="grey" scale=".01 .01 .01" position="-15.45 0.82 25.90" rotation="0 -90 0"></a-obj-model>
-    <a-obj-model src="#dragon" color="grey" scale=".01 .01 .01" position="-15.45 0.82 25.90" rotation="0 -90 0"></a-obj-model>
+    <a-obj-model src="#dragon" color="grey" scale="1 1 1" position="-15.45 0.82 25.90" rotation="0 -90 0"></a-obj-model>
 
 
-<!--     <a-obj-model src="#dragon" color="grey" scale=".01 .01 .01" position="-24.46 0.02 14.62" rotation="270 90 90"></a-obj-model>
- -->
 
 
     <!-- megan's stuff -->
