--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
       <a-asset-item id="billy" src="assets/billy.obj"></a-asset-item>
       <a-asset-item id="unicorn" src="assets/unicorn.obj"></a-asset-item>
       <a-asset-item id="road" src="assets/road.obj"></a-asset-item>
+      <a-asset-item id="cat" src="assets/cat.obj"></a-asset-item>
     </a-assets>
 
     <!-- Code for the sky -->
@@ -80,12 +81,14 @@
     <a-obj-model src="#wolf" color="grey" scale=".01 .01 .01" position="-24.46 0.02 14.62" rotation="0 -90 0"></a-obj-model>
 
     <!-- megan's stuff -->
-    <a-obj-model src="#panda" color="grey" scale=".001 .001 .001" position="30.59 0.01 -9.39" rotation="0 0 0"></a-obj-model>
+    <a-obj-model src="#panda" color="grey" scale=".001 .001 .001" position="30.59 0.15 -9.39" rotation="0 0 0"></a-obj-model>
+    
+    <a-obj-model src="#cat" color="orange" scale=".1 .1 .1" position="35.15 .14 10.84" rotation="270 270 0"></a-obj-model>
 
     <!-- nate is not last -->
 
     <!-- joanne's section -->
-    <a-obj-model src="assets/unicorn.obj" color="white" scale=".25 .25 .25" position="25 0 -25" rotation="0 0 0"></a-obj-model>
+    <a-obj-model src="assets/unicorn.obj" color="white" scale=".1 .1 .1" position="25 0 -25" rotation="0 0 0"></a-obj-model>
 
 
 
