--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
       <a-asset-item id="billy" src="assets/billy.obj"></a-asset-item>
       <a-asset-item id="unicorn" src="assets/unicorn.obj"></a-asset-item>
       <a-asset-item id="road" src="assets/road.obj"></a-asset-item>
+      <a-asset-item id="truck" src="assets/truck.obj"></a-asset-item>
     </a-assets>
 
     <!-- Code for the sky -->
@@ -75,6 +76,10 @@
     <a-obj-model src="#billy" color="grey" scale=".025 .025 .025 obj-model="obj:assets/billy.obj" position="62.35 -9 51" rotation="0 -48 -0"></a-obj-model>
 
     <a-obj-model src="#road" color="black" scale="5 1 18.5" obj-model="obj:assets/road.obj" position="-129.5 1 150.26" rotation="0 0 0"></a-obj-model>
+
+     <a-obj-model src="#truck" color="grey" scale="2.5 2.5 2.5" obj-model="obj:assets/truck.obj" position="71.53 1 82.45" rotation="0 48 0"></a-obj-model>
+
+     <a-obj-model src="#truck" color="white" scale="2.5 2.5 2.5" obj-model="obj:assets/truck.obj" position="87.62 47.56 86.94" rotation="0 48 0"></a-obj-model>
 
     <!-- Jen's section -->
     <a-obj-model src="#wolf" color="grey" scale=".01 .01 .01" position="-24.46 0.02 14.62" rotation="0 -90 0"></a-obj-model>
