--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
       <img id="briq" src="img/briq.jpeg">
       <img id="hard" src="img/hard.jpg">
       <img id="mazemap" src="img/tinymaze.jpg">
+      <img id="shiny" src="img/shiny.jpg">
       <a-asset-item id="rat" src="assets/rat.obj"></a-asset-item>
       <a-asset-item id="wolf" src="assets/wolf.obj"></a-asset-item>
       <a-asset-item id="panda" src="assets/panda.obj"></a-asset-item>
@@ -38,6 +39,7 @@
       <a-asset-item id="road" src="assets/road.obj"></a-asset-item>
       <a-asset-item id="truck" src="assets/truck.obj"></a-asset-item>
       <a-asset-item id="cloud" src="assets/cloud.obj"></a-asset-item>
+      <a-asset-item id="fence" src="assets/fence.obj"></a-asset-item>
 
         </a-assets>
 
@@ -70,16 +72,32 @@
     <a-box static-body position="6.43758 0 13.10506" color="red" depth="1" material="" geometry="" scale="5 15 10" src="#briq"></a-box>
     <a-box static-body position="11.13183 0 5.94682" color="red" depth="1" material="" geometry="" scale="15 15 5" src="#briq"></a-box>
     <a-box static-body position="-20.43404 0 -34.9838" color="red" depth="1" material="" geometry="" scale="30 15 5" src="#briq" rotation="0 90"></a-box>
-    <a-box static-body position="0 7.5" color="grey" depth="1" material="" geometry="" scale="100 1 100" src="#hard" visible=""></a-box>
+    <a-box static-body position="0 7.5" color="grey" depth="1" material="" geometry="" scale="100 2 105" src="#hard" visible=""></a-box>
 
     <!-- phil's stuff -->
-    <a-obj-model src="#rat" color="grey" scale="5 5 5" position="-4 0 -4" rotation="0 0 0"></a-obj-model>
+    <a-obj-model src="#rat" color="grey" scale="5 5 5" position="-15 0 -15" rotation="0 -45 0" animation="property: position; to: 14 0 0; dur: 1500; easing: linear;"></a-obj-model>
 
-    <a-obj-model src="#billy" color="grey" scale=".025 .025 .025 obj-model="obj:assets/billy.obj" position="62.35 -9 51" rotation="0 -48 -0"></a-obj-model>
+    <a-obj-model src="#billy" color="grey" scale=".025 .025 .025" position="62.35 -9 51" rotation="0 -48 -0"></a-obj-model>
 
-    <a-obj-model src="#road" color="black" scale="5 1 18.5" obj-model="obj:assets/road.obj" position="-129.5 1 150.26" rotation="0 0 0"></a-obj-model>
+    <a-obj-model src="#road" color="black" scale="5 1 18.5"  position="-129.5 1 150.26" rotation="0 0 0"></a-obj-model>
 
-     <a-obj-model src="#truck" color="grey" scale="2.5 2.5 2.5" obj-model="obj:assets/truck.obj" position="71.53 1 82.45" rotation="0 0 0"></a-obj-model>
+    <a-obj-model src="#truck" color="white" scale="2.5 2.5 2.5"  position="71.53 -0.02 82.45" rotation="0 0 0"></a-obj-model>
+
+    <a-obj-model static-body src="#fence" color="grey" scale=".05 .05 .05" position="71.53 -10.57 29" rotation="0 180 0" s></a-obj-model>
+
+    <a-obj-model static-body src="#fence" src="#shiny" color="grey" scale=".05 .05 .05" position="91.53 -10.57 29" rotation="0 180 0"  ></a-obj-model>
+
+    <a-obj-model static-body src="#fence" src="#shiny" color="grey" scale=".05 .05 .05" position="111.53 -10.57 29" rotation="0 180 0" ></a-obj-model>
+
+    <a-obj-model static-body src="#fence" src="#shiny" color="grey" scale=".05 .05 .05" position="131.53 -10.57 29" rotation="0 180 0" ></a-obj-model>
+
+    <a-obj-model static-body src="#fence" src="#shiny" color="grey" scale=".05 .05 .05" position="151.53 -10.57 29" rotation="0 180 0" ></a-obj-model>
+
+    <a-obj-model static-body src="#fence" src="#shiny" color="grey" scale=".05 .05 .05" position="-50.79 -10.57 29" rotation="0 180 0" ></a-obj-model>
+
+    <a-obj-model static-body src="#fence" src="#shiny" color="grey" scale=".05 .05 .05" position="-116.79 -10.57 29" rotation="0 180 0" ></a-obj-model>
+
+    <a-obj-model static-body src="#fence" src="#shiny" color="grey" scale=".05 .05 .05" position="-136.79 -10.57 29" rotation="0 180 0" ></a-obj-model>
 
 
     <!-- Jen's section -->
