--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     <a-box static-body position="32.04762 0 39.80026" color="red" depth="1" material="" geometry="" scale="5 15 20" src="#briq"></a-box>
     <a-box static-body position="-19.37451 0 7.36499" color="red" depth="1" material="" geometry="" scale="23 15 5" src="#briq"></a-box>
     <a-box static-body position="-32.73407 0 13.28699" color="red" depth="1" material="" geometry="" scale="5 15 45" src="#briq"></a-box>
-    <a-box static-body position="21.7123 0 -46.8185" color="red" depth="1" material="" geometry="" scale="55 15 5" src="#briq"></a-box>
+    <a-box static-body position="15.96 0 -46.8185" color="red" depth="1" material="" geometry="" scale="43.98 15 5" src="#briq"></a-box>
     <a-box static-body position="-6.26912 0 19.95035" color="red" depth="1" material="" geometry="" scale="5 15 30" src="#briq"></a-box>
     <a-box static-body position="20.17495 0 26.64971" color="red" depth="1" material="" geometry="" scale="8 15 5" src="#briq" rotation="0 90"></a-box>
     <a-box static-body position="31.36348 0 20.32419" color="red" depth="1" material="" geometry="" scale="27 15 5" src="#briq"></a-box>
@@ -71,8 +71,17 @@
     <a-box static-body position="30.21901 0 -34.24457" color="red" depth="1" material="" geometry="" scale="15 15 5" src="#briq"></a-box>
     <a-box static-body position="6.43758 0 13.10506" color="red" depth="1" material="" geometry="" scale="5 15 10" src="#briq"></a-box>
     <a-box static-body position="11.13183 0 5.94682" color="red" depth="1" material="" geometry="" scale="15 15 5" src="#briq"></a-box>
+
+    <a-box static-body position="-3.52 0 -66.39" color="red" depth="1" material="" geometry="" scale="5 15 33.92" src="#briq"></a-box>
+    <a-box static-body position="11.09 0 -84.27" color="red" depth="1" material="" geometry="" scale="34.25 15 5" src="#briq"></a-box>
+    <a-box static-body position="29.79 0 -78.35" color="red" depth="1" material="" geometry="" scale="5 15 16.79" src="#briq"></a-box>
+    <a-box static-body position="40.25 0 -72.49" color="red" depth="1" material="" geometry="" scale="17.86 15 5" src="#briq"></a-box>
+    <a-box static-body position="46.69 0 -59.56" color="red" depth="1" material="" geometry="" scale="5 15 21.66" src="#briq"></a-box>
+
     <a-box static-body position="-20.43404 0 -34.9838" color="red" depth="1" material="" geometry="" scale="30 15 5" src="#briq" rotation="0 90"></a-box>
     <a-box static-body position="0 7.5" color="grey" depth="1" material="" geometry="" scale="100 2 105" src="#hard" visible=""></a-box>
+    <a-box static-body position="20.38 7.5 -64.32" color="grey" depth="1" material="" geometry="" scale="59.14 2 51.34" src="#hard" visible=""></a-box>
+
 
     <!-- phil's stuff -->
     <a-obj-model src="#rat" color="grey" scale="5 5 5" position="-15 0 -15" rotation="0 -45 0" animation="property: position; to: 14 0 0; dur: 1500; easing: linear;"></a-obj-model>
