fixed size of roof

--- a/index.html
+++ b/index.html
@@ -40,14 +40,18 @@
       <a-asset-item id="truck" src="assets/truck.obj"></a-asset-item>
       <a-asset-item id="cloud" src="assets/cloud.obj"></a-asset-item>
       <a-asset-item id="fence" src="assets/fence.obj"></a-asset-item>
+      <a-asset-item id="tree" src="assets/tree/scene.gltf"></a-asset-item>
+      <a-asset-item id="deer" src="assets/deer/scene.gltf"></a-asset-item>
+      <a-asset-item id="imp" src="assets/imp/scene.gltf"></a-asset-item>
+    </a-assets>
 
-        </a-assets>
+    <a-entity gltf-model="#tree"></a-entity>
 
     <!-- Code for the sky -->
     <a-sky src="#sky" material="" geometry=""></a-sky>
 
 
-
+    
 
     <!-- Code for the maze -->
     <a-box src="#ded" id="ground" position='0 -0.5 0' width="200" height="1" depth="200" static-body material="src: #texture-floor"></a-box>
@@ -80,7 +84,7 @@
 
     <a-box static-body position="-20.43404 0 -34.9838" color="red" depth="1" material="" geometry="" scale="30 15 5" src="#briq" rotation="0 90"></a-box>
     <a-box static-body position="0 7.5" color="grey" depth="1" material="" geometry="" scale="100 2 105" src="#hard" visible=""></a-box>
-    <a-box static-body position="20.38 7.5 -64.32" color="grey" depth="1" material="" geometry="" scale="59.14 2 51.34" src="#hard" visible=""></a-box>
+    <a-box static-body position="20.38 7.5 -71.25" color="grey" depth="1" material="" geometry="" scale="59.14 2 37.53" src="#hard" visible=""></a-box>
 
 
     <!-- phil's stuff -->
@@ -118,6 +122,14 @@
     <a-obj-model src="#cat" color="orange" scale=".1 .1 .1" position="35.15 .14 10.84" rotation="270 270 0"></a-obj-model>
 
     <!-- nate is not last -->
+    <a-entity gltf-model="#deer"></a-entity>
+    <a-entity id='ball'
+          position="0 1 -4"
+
+    >
+    <a-entity id='imp-model' gltf-model="#imp"></a-entity>
+  </a-entity>
+
 
     <!-- joanne's section -->
     <a-obj-model src="assets/unicorn.obj" color="white" scale=".1 .1 .1" position="-40.32 0 -42.63" rotation="0 0 0"></a-obj-model>
