--- a/index.html
+++ b/index.html
@@ -43,6 +43,8 @@
       <a-asset-item id="tree" src="assets/tree/scene.gltf"></a-asset-item>
       <a-asset-item id="deer" src="assets/deer/scene.gltf"></a-asset-item>
       <a-asset-item id="imp" src="assets/imp/scene.gltf"></a-asset-item>
+      <a-asset-item id="dragon" src="assets/dragon.obj"></a-asset-item>
+
     </a-assets>
 
     <a-entity gltf-model="#tree"></a-entity>
@@ -114,7 +116,16 @@
 
 
     <!-- Jen's section -->
-    <a-obj-model src="#wolf" color="grey" scale=".008 .008 .008" position="-24.46 0.02 14.62" rotation="0 -90 0"></a-obj-model>
+    <a-obj-model static-body src="#wolf" color="grey" scale=".005 .005 .005" position="-24.46 0.02 14.62" rotation="0 -90 0"></a-obj-model>
+    
+    <a-obj-model static-body src="#dragon" color="black" scale=".05 .05 .05" position="-18.46 0.00 18.62" rotation="270 0 0"></a-obj-model>
+
+
+
+
+
+
+
 
     <!-- megan's stuff -->
     <a-obj-model src="#panda" color="grey" scale=".001 .001 .001" position="30.59 0.15 -9.39" rotation="0 0 0"></a-obj-model>
