--- a/index.html
+++ b/index.html
@@ -42,15 +42,12 @@
       <a-asset-item id="fence" src="assets/fence.obj"></a-asset-item>
       <a-asset-item id="tree" src="assets/tree/scene.gltf"></a-asset-item>
       <a-asset-item id="deer" src="assets/deer/scene.gltf"></a-asset-item>
-      <a-asset-item id="imp" src="assets/imp/scene.gltf"></a-asset-item>
       <a-asset-item id="dragon" src="assets/dragon.obj"></a-asset-item>
     </a-assets>
 
 
     <!-- Code for the sky -->
     <a-sky src="#sky" material="" geometry=""></a-sky>
-
-<a-entity gltf-model="#tree"></a-entity>
     
 
     <!-- Code for the maze -->
@@ -84,7 +81,6 @@
 
     <a-box static-body position="-20.43404 0 -34.9838" color="red" depth="1" material="" geometry="" scale="30 15 5" src="#briq" rotation="0 90"></a-box>
     <a-box static-body position="0 7.5" color="grey" depth="1" material="" geometry="" scale="100 2 105" src="#hard" visible=""></a-box>
-    <a-box static-body position="20.38 7.5 -71.25" color="grey" depth="1" material="" geometry="" scale="59.14 2 37.53" src="#hard" visible=""></a-box>
 
 
     <!-- phil's stuff -->
@@ -131,7 +127,8 @@
     <a-obj-model src="#cat" color="orange" scale=".09 .09 .09" position="35.15 .14 10.84" rotation="270 270 0"></a-obj-model>
 
     <!-- nate is not last -->
-
+    <a-entity gltf-model="#tree" position="21.218 0 -60.674" scale=".5 .5 .5"></a-entity>
+    <a-entity gltf-model="#deer" position="0 0 -62.416" scale=".4 .4 .4"></a-entity>
 
 
     <!-- joanne's section -->
