added animals and plants

--- a/index.html
+++ b/index.html
@@ -40,8 +40,18 @@
       <a-asset-item id="truck" src="assets/truck.obj"></a-asset-item>
       <a-asset-item id="cloud" src="assets/cloud.obj"></a-asset-item>
       <a-asset-item id="fence" src="assets/fence.obj"></a-asset-item>
-      <a-asset-item id="tree" src="assets/tree/scene.gltf"></a-asset-item>
       <a-asset-item id="deer" src="assets/deer/scene.gltf"></a-asset-item>
+      <a-asset-item id="rock" src="assets/rock/scene.gltf"></a-asset-item>
+      <a-asset-item id="fountain" src="assets/fountain/scene.gltf"></a-asset-item>
+      <a-asset-item id="grass" src="assets/grass/scene.gltf"></a-asset-item>
+      <a-asset-item id="mushroom" src="assets/mushroom/scene.gltf"></a-asset-item>
+      <a-asset-item id="rocks" src="assets/rocks/scene.gltf"></a-asset-item>
+      <a-asset-item id="shrub" src="assets/shrub/scene.gltf"></a-asset-item>
+      <a-asset-item id="squirrel" src="assets/squirrel/scene.gltf"></a-asset-item>
+      <a-asset-item id="treeone" src="assets/treeone/scene.gltf"></a-asset-item>
+      <a-asset-item id="treetwo" src="assets/treetwo/scene.gltf"></a-asset-item>
+      <a-asset-item id="treethree" src="assets/treethree/scene.gltf"></a-asset-item>
+
       <a-asset-item id="dragon" src="assets/dragon.obj"></a-asset-item>
       <a-asset-item id="throne" src="assets/gameofthrones.obj"></a-asset-item>
 
@@ -132,8 +142,15 @@
     <a-obj-model src="#cat" color="orange" scale=".09 .09 .09" position="35.15 .14 10.84" rotation="270 270 0"></a-obj-model>
 
     <!-- nate is not last -->
-    <a-entity gltf-model="#tree" position="21.218 0 -60.674" scale=".5 .5 .5"></a-entity>
-    <a-entity gltf-model="#deer" position="0 0 -62.416" scale=".4 .4 .4"></a-entity>
+    <a-entity static-body gltf-model="#deer" position="16.891 0 -60.674" scale=".4 .4 .4"></a-entity>
+    <a-entity static-body gltf-model="#fountain" position="8.345 0 -62.416" scale="3 3 3"></a-entity>
+    <a-entity static-body gltf-model="#grass" position="3.791 0 -69.118" scale="1 1 1"></a-entity>
+    <a-entity static-body gltf-model="#mushroom" position="150.000 0 -80.000" scale="3 3 3"></a-entity>
+    <a-entity static-body gltf-model="#rocks" position="100.000 .5 -80" scale="2 2 2"></a-entity>
+    <a-entity static-body gltf-model="#squirrel" position="15.303 1.500 -77.239" scale=".03 .03 .03"></a-entity>
+    <a-entity static-body gltf-model="#treeone" position="100.000 0 -62.426" scale="2 2 2"></a-entity>
+    <a-entity static-body gltf-model="#treetwo" position="190.000 0 -40.000" scale="4 4 4"></a-entity>
+    <a-entity static-body gltf-model="#treethree" position="100.000 0 -62.416" scale="2 2 2"></a-entity>
 
 
     <!-- joanne's section -->
