--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
 
       <a-asset-item id="dragon" src="assets/dragon.obj"></a-asset-item>
       <a-asset-item id="throne" src="assets/gameofthrones.obj"></a-asset-item>
+      <a-asset-item id="lions" src="assets/lions/scene.gltf"></a-asset-item>
 
     </a-assets>
 
@@ -126,10 +127,14 @@
 
     <!-- Jen's section -->
     <a-obj-model static-body src="#wolf" color="grey" scale=".005 .005 .005" position="-24.46 0.02 14.62" rotation="0 -90 0"></a-obj-model>
+
+    <a-obj-model static-body src="#wolf" color="white" scale=".005 .005 .005" position="-26.46 0.02 14.62" rotation="0 -90 0"></a-obj-model>
     
-    <a-obj-model src="#dragon" color="orange" scale=".05 .05 .05" position="-18.46 0.00 18.62" rotation="270 0 0"></a-obj-model>
+    <a-obj-model src="#dragon" color="orange" scale=".05 .05 .05" position="-21.460 0.00 18.62" rotation="270 -30 0"></a-obj-model>
 
     <a-obj-model src="#throne" color="black" scale=".03 .03 .03" position="-23.00 2.00 18.11" rotation="270 0 270"></a-obj-model>
+
+   <a-entity gltf-model="#lions" position="-30.00 3.0 25.00" rotation="0 90 0"scale=".06 .06 .06"></a-entity>
 
 
     <!-- megan's stuff -->
