--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
       <a-asset-item id="rat" src="assets/rat.obj"></a-asset-item>
       <a-asset-item id="wolf" src="assets/wolf.obj"></a-asset-item>
       <a-asset-item id="panda" src="assets/panda.obj"></a-asset-item>
+      <a-asset-item id="cat" src="assets/cat.obj"></a-asset-item>
       <a-asset-item id="billy" src="assets/billy.obj"></a-asset-item>
       <a-asset-item id="unicorn" src="assets/unicorn.obj"></a-asset-item>
       <a-asset-item id="road" src="assets/road.obj"></a-asset-item>
@@ -54,6 +55,8 @@
       <a-asset-item id="treethree" src="assets/treethree/scene.gltf"></a-asset-item>
       <a-asset-item id="treethree" src="assets/treethree/scene.gltf"></a-asset-item>
       <a-asset-item id="fence2" src="assets/fence/scene.gltf"></a-asset-item>
+
+      <a-asset-item id="rooster" src="assets/rooster/scene.gltf"></a-asset-item>
 
       <a-asset-item id="dragon" src="assets/dragon.obj"></a-asset-item>
       <a-asset-item id="throne" src="assets/gameofthrones.obj"></a-asset-item>
@@ -138,10 +141,9 @@
 
 
     <!-- megan's stuff -->
-    <a-obj-model src="#panda" color="grey" scale=".001 .001 .001" position="30.59 0.15 -9.39" rotation="0 0 0"></a-obj-model>
-
+    <a-obj-model src="#panda" color="grey" scale=".001 .001 .001" position="30.59 -0.626 -9.39" rotation="0 0 0"></a-obj-model>
     <a-obj-model src="#cat" color="orange" scale=".09 .09 .09" position="35.15 .14 10.84" rotation="270 270 0"></a-obj-model>
-
+    <a-entity static-body gltf-model="#rooster" position="40.998 0 -22.338" scale=".03 .03 .03"></a-entity>
 
     <!-- nate is not last -->
     <a-entity static-body gltf-model="#deer" position="16.891 0 -60.674" scale=".4 .4 .4"></a-entity>
