--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
       <a-asset-item id="fence2" src="assets/fence/scene.gltf"></a-asset-item>
 
       <a-asset-item id="rooster" src="assets/rooster/scene.gltf"></a-asset-item>
+      <a-asset-item id="doggo" src="assets/doggo/scene.gltf"></a-asset-item>
 
       <a-asset-item id="dragon" src="assets/dragon.obj"></a-asset-item>
       <a-asset-item id="throne" src="assets/gameofthrones.obj"></a-asset-item>
@@ -141,10 +142,11 @@
 
 
     <!-- megan's stuff -->
-    <a-obj-model src="#panda" color="grey" scale=".001 .001 .001" position="30.59 -0.626 -9.39" rotation="0 0 0"></a-obj-model>
+    <a-obj-model src="#panda" color="grey" scale=".001 .001 .001" position="24.509 -0.626 -30.572" rotation="0 0 0"></a-obj-model>
     <a-obj-model src="#cat" color="orange" scale=".09 .09 .09" position="35.15 .14 10.84" rotation="270 270 0"></a-obj-model>
     <a-entity static-body gltf-model="#rooster" position="40.998 0 -22.338" scale=".03 .03 .03"></a-entity>
-
+    <a-entity static-body gltf-model="#doggo" position="34.776 0 -9.655" scale=".5 .5 .5" rotation="0 180 0"></a-entity>
+  
     <!-- nate is not last -->
     <a-entity static-body gltf-model="#deer" position="16.891 0 -60.674" scale=".4 .4 .4"></a-entity>
     <a-entity static-body gltf-model="#fountain" position="8.345 0 -62.416" scale="3 3 3"></a-entity>
