more fixes and fences

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           camera
           universal-controls
           kinematic-body
-          position="40 10 60"> <!-- starting point for player -->
+          position="-40 50 100"> <!-- starting point for player -->
       </a-entity>
 
     <!-- ONLY CHANGE CODE BELOW THIS LINE TO AVOID MESSING UP PHYSICS -->
@@ -89,10 +89,10 @@
     <a-box static-body position="11.13183 0 5.94682" color="red" depth="1" material="" geometry="" scale="15 15 5" src="#briq"></a-box>
 
     <a-box static-body position="-3.52 0 -66.39" color="red" depth="1" material="" geometry="" scale="5 15 33.92" src="#briq"></a-box>
-    <a-box static-body position="11.09 0 -84.27" color="red" depth="1" material="" geometry="" scale="34.25 15 5" src="#briq"></a-box>
+<!--     <a-box static-body position="11.09 0 -84.27" color="red" depth="1" material="" geometry="" scale="34.25 15 5" src="#briq"></a-box>
     <a-box static-body position="29.79 0 -78.35" color="red" depth="1" material="" geometry="" scale="5 15 16.79" src="#briq"></a-box>
     <a-box static-body position="40.25 0 -72.49" color="red" depth="1" material="" geometry="" scale="17.86 15 5" src="#briq"></a-box>
-    <a-box static-body position="46.69 0 -59.56" color="red" depth="1" material="" geometry="" scale="5 15 21.66" src="#briq"></a-box>
+    <a-box static-body position="46.69 0 -59.56" color="red" depth="1" material="" geometry="" scale="5 15 21.66" src="#briq"></a-box> -->
 
     <a-box static-body position="-20.43404 0 -34.9838" color="red" depth="1" material="" geometry="" scale="30 15 5" src="#briq" rotation="0 90"></a-box>
     <a-box static-body position="0 7.5" color="grey" depth="1" material="" geometry="" scale="100 2 105" src="#hard" visible=""></a-box>
@@ -149,8 +149,19 @@
     <a-entity static-body gltf-model="#treetwo" position="190.000 0 -40.000" scale="4 4 4"></a-entity>
     <a-entity static-body gltf-model="#treethree" position="100.000 0 -62.416" scale="2 2 2"></a-entity>
     <a-entity static-body gltf-model="#treethree" position="100.000 0 -62.416" scale="2 2 2"></a-entity>
+    <a-entity static-body gltf-model="#fence2" position="11.554 0 -85.078" rotation="0 -111" scale="4 4 4"></a-entity>
+    <a-entity static-body gltf-model="#fence2" position="29.617 0 -85.078" rotation="0 -111" scale="4 4 4"></a-entity>
+    <a-entity static-body gltf-model="#fence2" position="49.333 0 -70.112" rotation="0 -111" scale="4 4 4"></a-entity>
+    <a-entity static-body gltf-model="#fence2" position="49.333 0 -67.801" rotation="0 -21.000" scale="4 4 4"></a-entity>
+    <a-entity static-body gltf-model="#fence2" position="30.877 0 -85.836" rotation="0 -21.000" scale="4 4 4"></a-entity>
 
-    <a-plane src="#meadow" position="5.854 0.150 -75.749" rotation="-90 0" scale=".7 .7 .7"></a-plane>
+
+
+    <a-plane src="#meadow" height="300" width="300" depth="-2.5" position="4.398 .2 -75.555" rotation="-90 0" scale=".06 .06 .06"></a-plane>
+    <a-plane src="#meadow" height="300" width="300" depth="-2.5" position="22.397 .2 -75.555" rotation="-90 0" scale=".06 .06 .06"></a-plane>
+    <a-plane src="#meadow" height="300" width="300" depth="-2.5" position="4.398 .2 -57.583" rotation="-90 0" scale=".06 .06 .06"></a-plane>
+    <a-plane src="#meadow" height="300" width="300" depth="-2.5" position="22.342 .2 -57.583" rotation="-90 0" scale=".06 .06 .06"></a-plane>
+    <a-plane src="#meadow" height="300" width="300" depth="-2.5" position="40.297 .2 -59.582" rotation="-90 0" scale=".06 .07 .06"></a-plane>
 
 
     <!-- joanne's section -->
