--- a/index.html
+++ b/index.html
@@ -35,7 +35,6 @@
 
       <a-asset-item id="rat" src="assets/rat.obj"></a-asset-item>
       <a-asset-item id="wolf" src="assets/wolf.obj"></a-asset-item>
-      <a-asset-item id="panda" src="assets/panda.obj"></a-asset-item>
       <a-asset-item id="cat" src="assets/cat.obj"></a-asset-item>
       <a-asset-item id="billy" src="assets/billy.obj"></a-asset-item>
       <a-asset-item id="unicorn" src="assets/unicorn.obj"></a-asset-item>
@@ -58,6 +57,7 @@
 
       <a-asset-item id="rooster" src="assets/rooster/scene.gltf"></a-asset-item>
       <a-asset-item id="doggo" src="assets/doggo/scene.gltf"></a-asset-item>
+      <a-asset-item id="panda" src="assets/panda/scene.gltf"></a-asset-item>
 
       <a-asset-item id="dragon" src="assets/dragon.obj"></a-asset-item>
       <a-asset-item id="throne" src="assets/gameofthrones.obj"></a-asset-item>
@@ -142,7 +142,7 @@
 
 
     <!-- megan's stuff -->
-    <a-obj-model src="#panda" color="grey" scale=".001 .001 .001" position="24.509 -0.626 -30.572" rotation="0 0 0"></a-obj-model>
+    <a-entity static-body gltf-model="#panda" position="27.032 -0.626 -30.572" scale=".06 .06 .06"></a-entity>
     <a-obj-model src="#cat" color="orange" scale=".09 .09 .09" position="35.15 .14 10.84" rotation="270 270 0"></a-obj-model>
     <a-entity static-body gltf-model="#rooster" position="40.998 0 -22.338" scale=".03 .03 .03"></a-entity>
     <a-entity static-body gltf-model="#doggo" position="34.776 0 -9.655" scale=".5 .5 .5" rotation="0 180 0"></a-entity>
