--- a/index.html
+++ b/index.html
@@ -33,15 +33,14 @@
       <img id="shiny" src="img/shiny.jpg">
       <img id="meadow" src="img/meadow.jpg">
 
-      <a-asset-item id="rat" src="assets/rat.obj"></a-asset-item>
+      <a-asset-item id="rat" src="assets/rat/scene.gltf"></a-asset-item>
       <a-asset-item id="wolf" src="assets/wolf.obj"></a-asset-item>
       <a-asset-item id="panda" src="assets/panda.obj"></a-asset-item>
-      <a-asset-item id="billy" src="assets/billy.obj"></a-asset-item>
+      <a-asset-item id="billy" src="assets/billboard/scene.gltf"></a-asset-item>
       <a-asset-item id="unicorn" src="assets/unicorn.obj"></a-asset-item>
       <a-asset-item id="road" src="assets/road.obj"></a-asset-item>
       <a-asset-item id="truck" src="assets/truck.obj"></a-asset-item>
       <a-asset-item id="cloud" src="assets/cloud.obj"></a-asset-item>
-      <a-asset-item id="fence" src="assets/fence.obj"></a-asset-item>
 
       <a-asset-item id="deer" src="assets/deer/scene.gltf"></a-asset-item>
       <a-asset-item id="fountain" src="assets/fountain/scene.gltf"></a-asset-item>
@@ -100,29 +99,14 @@
 
 
     <!-- phil's stuff -->
-    <a-obj-model src="#rat" color="grey" scale="5 5 5" position="-15 0 -15" rotation="0 -45 0" animation="property: position; to: 14 0 0; dur: 1500; easing: linear;"></a-obj-model>
+    <a-entity static-body gltf-model=#rat position="-15.746 2.129 -16.332" scale="0.025 0.025 0.025" rotation="0 -45 0"></a-entity>
 
-    <a-obj-model src="#billy" color="grey" scale=".025 .025 .025" position="62.35 -9 51" rotation="0 -48 -0"></a-obj-model>
+    <a-entity static-body gltf-model=#rat position="-15.503 2.129 -11.578" scale="0.025 0.025 0.025" rotation="0 45 0"></a-entity>
 
-    <a-obj-model src="#road" color="black" scale="5 1 18.5"  position="-129.5 1 150.26" rotation="0 0 0"></a-obj-model>
+    <a-entity static-body gltf-model=#rat position="-10.808 2.129 -14.755" scale="0.025 0.025 0.025" rotation="0 -135 0"></a-entity>
 
-    <a-obj-model src="#truck" color="white" scale="2.5 2.5 2.5"  position="71.53 -0.02 82.45" rotation="0 0 0"></a-obj-model>
+    <a-entity static-body gltf-model=#billy position="58.545 -1.348 36.754" scale="2 2 2" rotation="0 45 0"></a-entity>
 
-    <a-obj-model static-body src="#fence" color="grey" scale=".05 .05 .05" position="71.53 -10.57 29" rotation="0 180 0" s></a-obj-model>
-
-    <a-obj-model static-body src="#fence" src="#shiny" color="grey" scale=".05 .05 .05" position="91.53 -10.57 29" rotation="0 180 0"  ></a-obj-model>
-
-    <a-obj-model static-body src="#fence" src="#shiny" color="grey" scale=".05 .05 .05" position="111.53 -10.57 29" rotation="0 180 0" ></a-obj-model>
-
-    <a-obj-model static-body src="#fence" src="#shiny" color="grey" scale=".05 .05 .05" position="131.53 -10.57 29" rotation="0 180 0" ></a-obj-model>
-
-    <a-obj-model static-body src="#fence" src="#shiny" color="grey" scale=".05 .05 .05" position="151.53 -10.57 29" rotation="0 180 0" ></a-obj-model>
-
-    <a-obj-model static-body src="#fence" src="#shiny" color="grey" scale=".05 .05 .05" position="-50.79 -10.57 29" rotation="0 180 0" ></a-obj-model>
-
-    <a-obj-model static-body src="#fence" src="#shiny" color="grey" scale=".05 .05 .05" position="-116.79 -10.57 29" rotation="0 180 0" ></a-obj-model>
-
-    <a-obj-model static-body src="#fence" src="#shiny" color="grey" scale=".05 .05 .05" position="-136.79 -10.57 29" rotation="0 180 0" ></a-obj-model>
 
 
     <!-- Jen's section -->
